# BlockParty

./: README.md  think.md
fetcher/: Dockerfile  go.mod  go.sum  main.go  makefile  project-setup.sh
scrapper/: .dockerignore  .gitignore  Dockerfile  config.json  makefile  project-setup.sh  pyproject.toml
scrapper/src/ipfsscrapper/: main.py
scrapper/src/ipfsscrapper/adaptors/: common.py  metadata_postgresadaptor.py
scrapper/src/ipfsscrapper/connections/: postgresConnection.py
scrapper/src/ipfsscrapper/models/: ipfsmetada.py
scrapper/src/ipfsscrapper/scrapper/: scrapper.py
scrapper/src/ipfsscrapper/tests/: test_scrapper.py
scrapper/src/ipfsscrapper/utils/: config.py  json_fp.py
