[tool.poetry]
name = "scrapper"
version = "0.1.0"
description = ""
authors = ["kinfinity <kokou.egbewaett@gmail.com>"]
packages = [{include = "ipfsscrapper", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
boto3 = "^1.27.0"
sqlalchemy = "^2.0.17"
psycopg2-binary = "^2.9.6"
black = "^23.3.0"
docopt = "^0.6.2"
types-docopt = "^0.6.11.3"
mypy = "^1.4.1"
isort = "^5.12.0"
pylint = "^2.17.4"
asyncio = "^3.4.3"
requests = "^2.31.0"
pytest = "^7.4.0"
pytest-cov = "^4.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
